center vision cards, prevent horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
    margin: 0;
    box-sizing: border-box;
 }
+
+body, html{
+   overflow-x: hidden;
+}
  
 body{
    font-family: 'Montserrat', sans-serif;
@@ -1063,7 +1067,7 @@ footer{
       overflow: hidden;
    }
 
-   .event{
+   .event, .visions{
       justify-content: center;
    }
 
@@ -1087,6 +1091,10 @@ footer{
       main{
          width: 90%;
          overflow: hidden;
+      }
+
+      .event, .visions{
+         justify-content: center;
       }
    
       .slider{
